<resources>
    <string name="app_name">Test1_SideBarNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_preposition_quiz_starter">Preposition Quiz</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="preposition_quiz">Preposition Quiz</string>

    <string name="home_second">Home Second</string>
</resources>
