<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="xyz.dmercer.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="xyz.dmercer.myapplication.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_preposition_quiz_start"
        android:name="xyz.dmercer.myapplication.ui.quiz.PrepositionQuizStartFragment"
        android:label="@string/menu_preposition_quiz_starter"
        tools:layout="@layout/fragment_preposition_quiz_start" >
        <action
            android:id="@+id/action_nav_preposition_quiz_start_to_nav_preposition_quiz"
            app:destination="@id/nav_preposition_quiz" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="xyz.dmercer.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_preposition_quiz"
        android:name="xyz.dmercer.myapplication.ui.quiz.PrepositionQuizFragment"
        android:label="@string/preposition_quiz"
        tools:layout="@layout/fragment_preposition_quiz" >
        <action
            android:id="@+id/action_nav_preposition_quiz_to_nav_preposition_quiz_start"
            app:destination="@id/nav_preposition_quiz_start" />
    </fragment>
</navigation>